intermediate revision - cleaned up test class and updated documentation